2008-11-22  higepon  <higepon@users.sourceforge.jp>

        * lib/core/base.scm (exact-integer-sqrt): Added.

        * Added asin, acos for Complex number.

        * Rewrote sqrt for Complex number.

        * Added angle procedure and tests.

        * Added test for magnitude.

2008-11-22  kokosabu  <kokosabu@gmail.com>

        * Added : fix-, fxdiv-and-mod, fxdiv, fxmod, fxdiv0-and-mod0, fxdiv0, fxmod0.

        * Fixnum.h : fixed BITS.

2008-11-21  kokosabu  <kokosabu@gmail.com>

        * Added : fix*.

        * Fixnum.h : fixed MAX.

        * Makefile.am : fix sed option.

2008-11-21  higepon  <higepon@users.sourceforge.jp>

        * Rewrote string->number.

        * NumberScanner.re Fixed a heavy bug. It can distinguish between "1e2" and "#xe3".

2008-11-20  higepon  <higepon@users.sourceforge.jp>

        * Added : cos ,sin and tan.

        * Flonum.h : Added isNegativeZero().
                     This can distinguish between 0.0 and -0.0.

        * Added : log.

2008-11-20  kokosabu  <kokosabu@gmail.com>

        * Added : fx+.

2008-11-19  higepon  <higepon@users.sourceforge.jp>

        * Added : exp

        * Added : ratinalize originally from Ypsilon Scheme.

        * Fasl.cpp : Added Flonum support.

2008-11-19  kokosabu  <kokosabu@gmail.com>

        * Added : fxmax, fxmin.

2008-11-18  higepon  <higepon@users.sourceforge.jp>

        * Added : floor, ceiling, round and truncate.

        * Rewrote : denominator and numerator.

        * Added : gcd and lcm.

        * Rewrote : odd?, +, -, *, /, abs, div, mod, div0, mod0, div-and-mod div0-and-mod0.

2008-11-18  kokosabu  <kokosabu@gmail.com>

        * Added : fxzero?, fxpositive?, fxnegative?, fxodd?, fxeven?.

2008-11-17  higepon  <higepon@users.sourceforge.jp>

        * Rewrote even? for new numeric tower.

        * lib/srfi/%3A26.ss (srfi): Added srfi :26.

        * Implemented R6RS ByteVectors.

        * ArithmeticProcedures.cpp : Added magnitude.

        * Added : Fixnum.cpp
