@@ -2537,6 +2537,21 @@
 (-3    (fxmod0 -123 -10))
 (error (fxmod0 123 0))
 (error (fxmod0 123.0 10.0))
+(mosh-only 5 (receive (a b) (fx+/carry (greatest-fixnum) (greatest-fixnum) 7) a))
+(mosh-only 1 (receive (a b) (fx+/carry (greatest-fixnum) (greatest-fixnum) 7) b))
+(error (fx+/carry 1.0 2 3))
+(error (fx+/carry 1 2+2i 3))
+(error (fx+/carry 1 2 (/ 3 2)))
+(mosh-only -5 (receive (a b) (fx-/carry (least-fixnum) (greatest-fixnum) 6) a))
+(mosh-only -1 (receive (a b) (fx-/carry (least-fixnum) (greatest-fixnum) 6) b))
+(error (fx-/carry 1.0 2 3))
+(error (fx-/carry 1 2+2i 3))
+(error (fx-/carry 1 2 (/ 3 2)))
+(mosh-only 3 (receive (a b) (fx*/carry 4 (greatest-fixnum) 7) a))
+(mosh-only 2 (receive (a b) (fx*/carry 4 (greatest-fixnum) 7) b))
+(error (fx*/carry 1.0 2 3))
+(error (fx*/carry 1 2+2i 3))
+(error (fx*/carry 1 2 (/ 3 2)))
 
 ;; number reader 2
 (1 #b1)
